# typed_format

./: .gitignore  Cargo.toml
src/value/: deserializer.rs  identifier.rs  mod.rs  parser.rs  printer.rs  serializer.rs  types.rs  value.pest
tests/: feature_test.rs  type_parsing.rs
tests/round_trip/: mod.rs
