[package]
name = "typed_format"
version = "0.1.0"
authors = ["Dario Bartussek <d.bartussek@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.32"

serde = "1.0.115"

base64 = "0.12.3"

pest = "2.1.3"
pest_derive = "2.1.0"
itertools = "0.9.0"

[dev-dependencies]
serde_derive = "1.0.115"
maplit = "1.0.2"
